--- a/src/components/banner/style.css
+++ b/src/components/banner/style.css
@@ -1,21 +1,4 @@
-#app {
-    height: 100%;
-  }
-  html,
-  body {
-    position: relative;
-    height: 100%;
-  }
-  
-  body {
-    background: #eee;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    color: #000;
-    margin: 0;
-    padding: 0;
-  }
-  
+
   .swiper {
     width: 100%;
     height: 100%;
@@ -69,3 +52,26 @@
     transform: rotate(-90deg);
   }
   
+
+  #banner1 {
+    background-image: url('../../assets/images/slide-1.jpg');
+    width: 100%;
+    height: 100vh;
+    background-position: center center;
+    background-size: cover cover;
+    background-repeat: no-repeat;
+  }
+  #banner2 {
+    background-image: url('../../assets/images/slide-2.jpg');
+    width: 100%;
+    height: 100vh;
+    background-position: center center;
+    background-size: cover;
+  }
+  #banner3 {
+    background-image: url('../../assets/images/slide-3.jpg');
+    width: 100%;
+    height: 100vh;
+    background-position: center center;
+    background-size: cover;
+  }
