--- a/src/components/banner/style.css
+++ b/src/components/banner/style.css
@@ -58,7 +58,7 @@
     width: 100%;
     height: 100vh;
     background-position: center center;
-    background-size: cover cover;
+    /* background-size: cover cover; */
     background-repeat: no-repeat;
   }
   #banner2 {
