--- a/src/components/banner/style.css
+++ b/src/components/banner/style.css
@@ -58,7 +58,7 @@
     width: 100%;
     height: 100vh;
     background-position: center center;
-    /* background-size: cover cover; */
+    background-size: cover;
     background-repeat: no-repeat;
   }
   #banner2 {
@@ -67,6 +67,7 @@
     height: 100vh;
     background-position: center center;
     background-size: cover;
+    background-repeat: no-repeat;
   }
   #banner3 {
     background-image: url('../../assets/images/slide-3.jpg');
@@ -74,4 +75,5 @@
     height: 100vh;
     background-position: center center;
     background-size: cover;
+    background-repeat: no-repeat;
   }
